testing/eks-with-existed-vpc/main.tf
terraform {
  required_version = ">= 0.11.8"
}

provider "aws" {
  version = ">= 2.6.0"
  region  = "us-east-1"
}

provider "random" {
  version = "= 1.3.1"
}


locals {
  cluster_name = "tinhuynh"
}

resource "random_string" "suffix" {
  length  = 8
  special = false
}

resource "aws_security_group" "worker_group_mgmt_one" {
  name_prefix = "worker_group_mgmt_one"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "worker_group_mgmt_two" {
  name_prefix = "worker_group_mgmt_two"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "192.168.0.0/16",
    ]
  }
}

resource "aws_security_group" "all_worker_mgmt" {
  name_prefix = "all_worker_management"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
      "172.16.0.0/12",
      "192.168.0.0/16",
    ]
  }
}

//module "vpc" {
//  source             = "../../modules/services/vpc"
//  name               = "test-vpc"
//  cidr               = "10.0.0.0/16"
//  azs                 = ["us-east-1a", "us-east-1b"]
//  private_subnets     = ["10.0.10.0/24", "10.0.20.0/24"]
//  public_subnets      = ["10.0.1.0/24", "10.0.2.0/24"]
//  enable_nat_gateway = true
//  single_nat_gateway = true
//
//  tags = {
//    "kubernetes.io/cluster/${local.cluster_name}" = "shared"
//  }
//
//  public_subnet_tags = {
//    "kubernetes.io/cluster/${local.cluster_name}" = "shared"
//  }
//
//  private_subnet_tags = {
//    "kubernetes.io/cluster/${local.cluster_name}" = "shared"
//    "kubernetes.io/role/internal-elb"             = "true"
//  }
//}

module "eks" {
  source       = "../../modules/services/eks"
  cluster_name = "${local.cluster_name}"
  subnets      = ["${var.private_subnets}"]

  tags = {
    Environment = "test"
    GithubRepo  = "terraform-aws-eks"
    GithubOrg   = "terraform-aws-modules"
  }

  vpc_id        = "${var.vpc_id}"
  worker_group_count = 1

  worker_groups = [
    {
      name                          = "worker-group-1"
      instance_type                 = "t3.micro"
      additional_userdata           = "echo foo bar"
      asg_desired_capacity          = 2
      additional_security_group_ids = "${aws_security_group.worker_group_mgmt_one.id}"
    },
//    {
//      name                          = "worker-group-2"
//      instance_type                 = "t2.medium"
//      additional_userdata           = "echo foo bar"
//      additional_security_group_ids = "${aws_security_group.worker_group_mgmt_two.id}"
//      asg_desired_capacity          = 1
//    },
  ]

  worker_additional_security_group_ids = ["${aws_security_group.all_worker_mgmt.id}"]
  map_roles                            = "${var.map_roles}"
  map_roles_count                      = "${var.map_roles_count}"
  map_users                            = "${var.map_users}"
  map_users_count                      = "${var.map_users_count}"
  map_accounts                         = "${var.map_accounts}"
  map_accounts_count                   = "${var.map_accounts_count}"
}
